# smart_vms

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  README.md  package.json
.cursor/context/: README.md
.cursor/rules/: architecture-docs.mdc  auto-commit-github.mdc  axis-vapix.mdc  smart-vms-core.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml
ai/: README.md  agent-contracts.md  current-state.md  project-context.md
ai/agents/: README.md  ai-analytics.md  architect.md  debug.md  documentation.md  edge-deployment.md  event-pipeline.md  privacy-security.md  program-delivery.md  refactor.md  test-strategy.md
ai/examples/: session-handoff.md
ai/feedback/: code-review.md  release-retro.md
deploy/: Caddyfile  README.md  docker-compose.tls.yml  docker-compose.yml  init-db.sql
docs/: README.md
edge-agent/: README.md  config.example.yaml  pyproject.toml
edge-agent/src/edge_agent/: __init__.py  agent.py  cli.py  detector.py  events.py  ingest.py  publisher.py  vapix_ingest.py
edge-agent/tests/: test_events.py  test_publisher.py
prompts/: README.md
scripts/: pipeline-smoke.mjs  soak-24h.mjs
server/: Dockerfile  README.md  package-lock.json  package.json
shared/: README.md  package-lock.json  package.json
web/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.auth-plugin.ts  vite.axis-proxy.ts  vite.config.ts  vite.recording-plugin.ts  vite.server-proxy.ts  vite.vapix-config-plugin.ts  vite.vapix-events-plugin.ts  vitest.config.ts
(+304 files in other folders)
